// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DroppableWordList component in WordList/index.js DroppableWordList component full integration test 1`] = `
<DragDropContext(TestContextContainer)
  chapter={1}
  modalOpen={false}
  moveBackToWordBank={[Function]}
  onDropTargetToken={[Function]}
  verse={1}
  words={
    Array [
      Object {
        "index": 0,
        "occurrence": 1,
        "occurrences": 1,
      },
      Object {
        "index": 0,
        "occurrence": 1,
        "occurrences": 2,
      },
      Object {
        "index": 0,
        "occurrence": 2,
        "occurrences": 2,
      },
      Object {
        "index": 0,
        "occurrence": 1,
        "occurrences": 1,
      },
    ]
  }
>
  <TestContextContainer
    chapter={1}
    modalOpen={false}
    moveBackToWordBank={[Function]}
    onDropTargetToken={[Function]}
    verse={1}
    words={
      Array [
        Object {
          "index": 0,
          "occurrence": 1,
          "occurrences": 1,
        },
        Object {
          "index": 0,
          "occurrence": 1,
          "occurrences": 2,
        },
        Object {
          "index": 0,
          "occurrence": 2,
          "occurrences": 2,
        },
        Object {
          "index": 0,
          "occurrence": 1,
          "occurrences": 1,
        },
      ]
    }
  >
    <DropTarget(DroppableWordList)
      chapter={1}
      modalOpen={false}
      moveBackToWordBank={[Function]}
      onDropTargetToken={[Function]}
      verse={1}
      words={
        Array [
          Object {
            "index": 0,
            "occurrence": 1,
            "occurrences": 1,
          },
          Object {
            "index": 0,
            "occurrence": 1,
            "occurrences": 2,
          },
          Object {
            "index": 0,
            "occurrence": 2,
            "occurrences": 2,
          },
          Object {
            "index": 0,
            "occurrence": 1,
            "occurrences": 1,
          },
        ]
      }
    >
      <DroppableWordList
        canDrop={false}
        chapter={1}
        connectDropTarget={[Function]}
        direction="ltr"
        isOver={false}
        modalOpen={false}
        moveBackToWordBank={[Function]}
        onDropTargetToken={[Function]}
        reset={false}
        verse={1}
        words={
          Array [
            Object {
              "index": 0,
              "occurrence": 1,
              "occurrences": 1,
            },
            Object {
              "index": 0,
              "occurrence": 1,
              "occurrences": 2,
            },
            Object {
              "index": 0,
              "occurrence": 2,
              "occurrences": 2,
            },
            Object {
              "index": 0,
              "occurrence": 1,
              "occurrences": 1,
            },
          ]
        }
      >
        <div
          id="wordList"
          style={
            Object {
              "backgroundColor": "#DCDCDC",
              "direction": "ltr",
              "height": "100%",
              "overflowY": "auto",
              "padding": "8px",
              "width": "100%",
            }
          }
        >
          <WordList
            chapter={1}
            direction="ltr"
            isOver={false}
            onWordClick={[Function]}
            onWordDragged={[Function]}
            selectedWordPositions={Array []}
            selectedWords={Array []}
            verse={1}
            words={
              Array [
                Object {
                  "index": 0,
                  "occurrence": 1,
                  "occurrences": 1,
                },
                Object {
                  "index": 0,
                  "occurrence": 1,
                  "occurrences": 2,
                },
                Object {
                  "index": 0,
                  "occurrence": 2,
                  "occurrences": 2,
                },
                Object {
                  "index": 0,
                  "occurrence": 1,
                  "occurrences": 1,
                },
              ]
            }
          >
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                key="0"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={false}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 1,
                      "occurrences": 1,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={false}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 1,
                        "occurrences": 1,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={false}
                        isSuggestion={false}
                        occurrence={1}
                        occurrences={1}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w1"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w1"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #44C6FF",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 1,
                                  "padding": "9px",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w1
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={1}
                                occurrences={1}
                              />
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <div
                key="1"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={false}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 1,
                      "occurrences": 2,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={false}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 1,
                        "occurrences": 2,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={false}
                        isSuggestion={false}
                        occurrence={1}
                        occurrences={2}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w2"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w2"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #44C6FF",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 1,
                                  "padding": "9px",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w2
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={1}
                                occurrences={2}
                              >
                                <sup
                                  style={
                                    Object {
                                      "marginTop": "2px",
                                      "opacity": "0.8",
                                      "top": 0,
                                    }
                                  }
                                >
                                  1
                                </sup>
                              </WordOccurrence>
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <div
                key="2"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={false}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 2,
                      "occurrences": 2,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={false}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 2,
                        "occurrences": 2,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={false}
                        isSuggestion={false}
                        occurrence={2}
                        occurrences={2}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w2"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w2"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #44C6FF",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 1,
                                  "padding": "9px",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w2
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={2}
                                occurrences={2}
                              >
                                <sup
                                  style={
                                    Object {
                                      "marginTop": "2px",
                                      "opacity": "0.8",
                                      "top": 0,
                                    }
                                  }
                                >
                                  2
                                </sup>
                              </WordOccurrence>
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <div
                key="3"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={true}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 1,
                      "occurrences": 1,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={true}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 1,
                        "occurrences": 1,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={true}
                        isSuggestion={false}
                        occurrence={1}
                        occurrences={1}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w3"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w3"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #868686",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "not-allowed",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 0.3,
                                  "padding": "9px",
                                  "userSelect": "none",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w3
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={1}
                                occurrences={1}
                              />
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <ReactTooltip
                className=""
                id="word-overflow-tooltip"
                insecure={true}
                resizeHide={true}
                wrapper="div"
              >
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                  id="word-overflow-tooltip"
                />
              </ReactTooltip>
            </div>
          </WordList>
        </div>
      </DroppableWordList>
    </DropTarget(DroppableWordList)>
  </TestContextContainer>
</DragDropContext(TestContextContainer)>
`;

exports[`Test DroppableWordList component in WordList/index.js DroppableWordList test scroll save and restore 1`] = `
<DragDropContext(TestContextContainer)
  chapter={2}
  isOver={false}
  modalOpen={false}
  moveBackToWordBank={[Function]}
  onDropTargetToken={[Function]}
  verse={1}
  wordList={
    Object {
      "scrollTop": 0,
    }
  }
  words={
    Array [
      Object {
        "index": 0,
        "occurrence": 1,
        "occurrences": 1,
      },
      Object {
        "index": 0,
        "occurrence": 1,
        "occurrences": 2,
      },
      Object {
        "index": 0,
        "occurrence": 2,
        "occurrences": 2,
      },
      Object {
        "index": 0,
        "occurrence": 1,
        "occurrences": 1,
      },
    ]
  }
>
  <TestContextContainer
    chapter={2}
    isOver={false}
    modalOpen={false}
    moveBackToWordBank={[Function]}
    onDropTargetToken={[Function]}
    verse={1}
    wordList={
      Object {
        "scrollTop": 0,
      }
    }
    words={
      Array [
        Object {
          "index": 0,
          "occurrence": 1,
          "occurrences": 1,
        },
        Object {
          "index": 0,
          "occurrence": 1,
          "occurrences": 2,
        },
        Object {
          "index": 0,
          "occurrence": 2,
          "occurrences": 2,
        },
        Object {
          "index": 0,
          "occurrence": 1,
          "occurrences": 1,
        },
      ]
    }
  >
    <DropTarget(DroppableWordList)
      chapter={2}
      isOver={false}
      modalOpen={false}
      moveBackToWordBank={[Function]}
      onDropTargetToken={[Function]}
      verse={1}
      wordList={
        Object {
          "scrollTop": 0,
        }
      }
      words={
        Array [
          Object {
            "index": 0,
            "occurrence": 1,
            "occurrences": 1,
          },
          Object {
            "index": 0,
            "occurrence": 1,
            "occurrences": 2,
          },
          Object {
            "index": 0,
            "occurrence": 2,
            "occurrences": 2,
          },
          Object {
            "index": 0,
            "occurrence": 1,
            "occurrences": 1,
          },
        ]
      }
    >
      <DroppableWordList
        canDrop={false}
        chapter={2}
        connectDropTarget={[Function]}
        direction="ltr"
        isOver={false}
        modalOpen={false}
        moveBackToWordBank={[Function]}
        onDropTargetToken={[Function]}
        reset={false}
        verse={1}
        wordList={
          Object {
            "scrollTop": 0,
          }
        }
        words={
          Array [
            Object {
              "index": 0,
              "occurrence": 1,
              "occurrences": 1,
            },
            Object {
              "index": 0,
              "occurrence": 1,
              "occurrences": 2,
            },
            Object {
              "index": 0,
              "occurrence": 2,
              "occurrences": 2,
            },
            Object {
              "index": 0,
              "occurrence": 1,
              "occurrences": 1,
            },
          ]
        }
      >
        <div
          id="wordList"
          style={
            Object {
              "backgroundColor": "#DCDCDC",
              "direction": "ltr",
              "height": "100%",
              "overflowY": "auto",
              "padding": "8px",
              "width": "100%",
            }
          }
        >
          <WordList
            chapter={2}
            direction="ltr"
            isOver={false}
            onWordClick={[Function]}
            onWordDragged={[Function]}
            selectedWordPositions={Array []}
            selectedWords={Array []}
            verse={1}
            words={
              Array [
                Object {
                  "index": 0,
                  "occurrence": 1,
                  "occurrences": 1,
                },
                Object {
                  "index": 0,
                  "occurrence": 1,
                  "occurrences": 2,
                },
                Object {
                  "index": 0,
                  "occurrence": 2,
                  "occurrences": 2,
                },
                Object {
                  "index": 0,
                  "occurrence": 1,
                  "occurrences": 1,
                },
              ]
            }
          >
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                key="0"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={false}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 1,
                      "occurrences": 1,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={false}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 1,
                        "occurrences": 1,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={false}
                        isSuggestion={false}
                        occurrence={1}
                        occurrences={1}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w1"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w1"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #44C6FF",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 1,
                                  "padding": "9px",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w1
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={1}
                                occurrences={1}
                              />
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <div
                key="1"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={false}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 1,
                      "occurrences": 2,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={false}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 1,
                        "occurrences": 2,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={false}
                        isSuggestion={false}
                        occurrence={1}
                        occurrences={2}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w2"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w2"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #44C6FF",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 1,
                                  "padding": "9px",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w2
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={1}
                                occurrences={2}
                              >
                                <sup
                                  style={
                                    Object {
                                      "marginTop": "2px",
                                      "opacity": "0.8",
                                      "top": 0,
                                    }
                                  }
                                >
                                  1
                                </sup>
                              </WordOccurrence>
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <div
                key="2"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={false}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 2,
                      "occurrences": 2,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={false}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 2,
                        "occurrences": 2,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={false}
                        isSuggestion={false}
                        occurrence={2}
                        occurrences={2}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w2"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w2"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #44C6FF",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 1,
                                  "padding": "9px",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w2
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={2}
                                occurrences={2}
                              >
                                <sup
                                  style={
                                    Object {
                                      "marginTop": "2px",
                                      "opacity": "0.8",
                                      "top": 0,
                                    }
                                  }
                                >
                                  2
                                </sup>
                              </WordOccurrence>
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <div
                key="3"
                style={
                  Object {
                    "padding": "5px 10px",
                  }
                }
              >
                <DragSource(SecondaryToken)
                  direction="ltr"
                  disabled={true}
                  onClick={[Function]}
                  onEndDrag={[Function]}
                  selected={false}
                  selectedTokens={Array []}
                  targetLanguageFontClassName=""
                  token={
                    Object {
                      "index": 0,
                      "occurrence": 1,
                      "occurrences": 1,
                    }
                  }
                >
                  <SecondaryToken
                    connectDragPreview={[Function]}
                    connectDragSource={[Function]}
                    direction="ltr"
                    disabled={true}
                    isDragging={false}
                    isSelected={false}
                    onAccept={[Function]}
                    onClick={[Function]}
                    onEndDrag={[Function]}
                    selected={false}
                    selectedTokens={Array []}
                    targetLanguageFontClassName=""
                    token={
                      Object {
                        "index": 0,
                        "occurrence": 1,
                        "occurrences": 1,
                      }
                    }
                  >
                    <div
                      onClick={[Function]}
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <WordCard
                        direction="ltr"
                        disableTooltip={false}
                        disabled={true}
                        isSuggestion={false}
                        occurrence={1}
                        occurrences={1}
                        onCancel={[Function]}
                        selected={false}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        targetLanguageFontClassName=""
                        word="w3"
                      >
                        <span
                          data-delay-hide={100}
                          data-delay-show={200}
                          data-effect="solid"
                          data-for="word-overflow-tooltip"
                          data-multiline={true}
                          data-place="bottom"
                          data-tip="w3"
                          data-tip-disable={true}
                          data-type="dark"
                        >
                          <div
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "borderLeft": "5px solid #868686",
                                  "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                                  "cursor": "not-allowed",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "opacity": 0.3,
                                  "padding": "9px",
                                  "userSelect": "none",
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "display": "flex",
                                    "flex": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <span
                                  className=""
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "flexGrow": 2,
                                      "overflow": "hidden",
                                      "textOverflow": "ellipsis",
                                      "width": "max-content",
                                    }
                                  }
                                >
                                  w3
                                </span>
                              </span>
                              <WordOccurrence
                                occurrence={1}
                                occurrences={1}
                              />
                            </div>
                          </div>
                        </span>
                      </WordCard>
                    </div>
                  </SecondaryToken>
                </DragSource(SecondaryToken)>
              </div>
              <ReactTooltip
                className=""
                id="word-overflow-tooltip"
                insecure={true}
                resizeHide={true}
                wrapper="div"
              >
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                  id="word-overflow-tooltip"
                />
              </ReactTooltip>
            </div>
          </WordList>
        </div>
      </DroppableWordList>
    </DropTarget(DroppableWordList)>
  </TestContextContainer>
</DragDropContext(TestContextContainer)>
`;
